tests/invalid/09_funcion_mala.patito
programa funcionMala;

nula sinParens {
    {
    }
} ;

inicio
{
}
fin
